Cleaned the front end on main pages, to ùmake sure the z-index and all outcome is clean and there is no bugs

--- a/app/assets/stylesheets/components/_dashboard_bar.scss
+++ b/app/assets/stylesheets/components/_dashboard_bar.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 4%;
   h1 {
     margin-bottom: 5px;
   }
