--- a/app/assets/stylesheets/components/_user_dashboard.scss
+++ b/app/assets/stylesheets/components/_user_dashboard.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin: 0;
+  padding: 0;
 }
 
 .text-user {
